--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,5 @@ platform = atmelsam
 board = nano_33_iot
 framework = arduino
 lib_deps = 
-	digitaldragon/SSLClient@^1.2.0
+	;digitaldragon/SSLClient@^1.2.0
 	;droscy/esp_mbedtls_esp8266@^2.22300.2
